Fix css / fix paragraph line wrapping.

--- a/bookmarks/static/style.css
+++ b/bookmarks/static/style.css
@@ -89,6 +89,10 @@ p {
     font-size: 10pt;
     font-weight: 400;
     line-height: 1.5;
+
+    width:     90%;
+    word-wrap: break-word;
+  
 }
 
 h1 { 
